--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
 body {
-  padding: 100px;
+  padding: 30px;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-color: #cbc2a0;
+  /* background-color: #cbc2a0; */
+  background: url(/src/images/anime-coffee-shop-illustration_23-2151764614.jpg)
+    center / cover no-repeat;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+}
+html {
+  width: 900px;
 }
 ul {
   list-style: none;
