--- a/src/components/Feedback/Feedback.module.css
+++ b/src/components/Feedback/Feedback.module.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   font-size: 22px;
   border-radius: 10px;
-  background-color: hsl(48, 14%, 34%);
+  background-color: #ba4a3f;
   box-shadow: 0 1px 7px rgba(15, 15, 15, 0.9);
   padding: 30px;
   margin-top: 40px;
