--- a/src/components/Feedback/Feedback.module.css
+++ b/src/components/Feedback/Feedback.module.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   font-size: 22px;
   border-radius: 10px;
-  background-color: #ba4a3f;
+  background: rgba(241, 130, 75, 0.5);
   box-shadow: 0 1px 7px rgba(15, 15, 15, 0.9);
   padding: 30px;
   margin-top: 40px;
@@ -17,4 +17,11 @@
 .feedbackItem {
   font-size: 20px;
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.icon {
+  height: 26px;
+  width: 26px;
 }
