--- a/src/components/Options/Options.module.css
+++ b/src/components/Options/Options.module.css
@@ -6,6 +6,10 @@
   flex-wrap: wrap;
 }
 .feedbackItem {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
   margin-top: 30px;
   width: 160px;
   height: 60px;
@@ -17,6 +21,11 @@
   font-size: 20px;
   font-weight: bold;
 }
+.icon {
+  height: 26px;
+  width: 26px;
+  fill: #714159;
+}
 .feedbackItem:hover,
 .feedbackItem:focus,
 .feedbackItem:active {
@@ -24,6 +33,10 @@
   cursor: pointer;
 }
 .feedbackReset {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
   margin-top: 30px;
   width: 160px;
   height: 60px;
@@ -31,7 +44,7 @@
   padding: 10px;
   border-radius: 10px;
   border: none;
-  background-color: #ba4a3f;
+  background-color: #ffac32;
   box-shadow: 0 1px 7px rgba(15, 15, 15, 0.9);
   font-size: 20px;
   font-weight: bold;
